--- a/res/values-zh-rCN/track_management.xml
+++ b/res/values-zh-rCN/track_management.xml
@@ -55,7 +55,7 @@
 <string name="min_unit">分</string>
 <string name="sec_unit">秒</string>
 <string name="meter_unit">米</string>
-<string name="point_number_unit">点</string>
+<string name="point_number_unit">GPS标记点</string>
 <string name="source_text">来源</string>
 <string name="track_source_string">档案</string>
 <string name="import_fail">汇入失败</string>
@@ -71,4 +71,5 @@
 <string name="speed_unit">米/秒</string>
 <string name="no_track_description">无路径描述</string>
 <string name="IMPORT_and_BROWSE_TRACK_MENU">汇入/浏览路径</string>
+<string name="kilometer_unit">公里</string>
 </resources>
