--- a/res/values-zh/track_management.xml
+++ b/res/values-zh/track_management.xml
@@ -61,11 +61,11 @@
 <string name="hr_unit">時</string>
 <string name="min_unit">分</string>
 <string name="sec_unit">秒</string>
-<string name="meter_unit">米</string>
+<string name="meter_unit">公尺</string>
 <string name="point_number_unit">GPS標記點</string>
 
 <string name="source_text">來源</string>
-<string name="track_source_string">檔案</string>
+<string name="track_source_string_file">來源:檔案</string>
 <string name="import_fail">匯入失敗</string>
 
 <string name="track_title_string">路徑名稱</string>
@@ -77,8 +77,9 @@
 <string name="track_description_string">描述</string>
 <string name="whole_track_information_dialog_title">完整路徑資訊</string>
 <string name="whole_track_information_dialog_body">此路經相關資訊如下：</string>
-<string name="speed_unit">米/秒</string>
+<string name="speed_unit">公里/小時</string>
 <string name="no_track_description">無路徑描述</string>
 <string name="IMPORT_and_BROWSE_TRACK_MENU">匯入/瀏覽路徑</string>
 <string name="kilometer_unit">公里</string>
+<string name="track_source_string_gps">來源:GPS</string>
 </resources>
